<resources>
    <string name="app_name">AmiraShop</string>
    <string name="register_title">Amira Shop</string>
    <string name="home_btm_nav">Home</string>
    <string name="log_btm_nav">Log</string>
    <string name="product_btm_nav">Product</string>
    <string name="profile_btm_nav">Profile</string>
    <string name="naming_tips">Tips: Jenis + Merk + Keterangan tambahan</string>
    <string name="price_hint">Harga satuan</string>
    <string name="btn_add_product">Konfirmasi</string>
    <string name="number_default">0</string>
    <string name="cart_title">Keranjang Anda</string>
    <string name="cart_total">Total</string>
    <string name="price_value">Rp. 0</string>
    <string name="cart_btn">Simpan Transaksi</string>
    <string name="cart_empty_title">Keranjang Mu Masih Kosong!</string>
    <string name="cart_empty_message">Sebelum memproses barang harap untuk menambahkan produk\n ke dalam keranjang terlebih dahulu.</string>
    <string name="product_name_hint">Nama Barang</string>
    <string name="product_stock">Jumlah Stok</string>
    <string name="product_min_stock">Stok Minimum</string>
    <string name="product_price_hint">Rp. </string>
    <string name="sell_total">Total 0 Produk</string>
    <string name="sell_total_price">Rp. 0</string>
    <string name="empty_state_message">Maaf Produk Masih Kosong</string>
    <string name="hallo_message">Hallo</string>
    <string name="quick_action">Quick Action</string>
    <string name="add_product">Tambah Produk</string>
    <string name="sell_product">Jual Produk</string>
    <string name="low_stock">Stok Tipis</string>
    <string name="products">Produk</string>
    <string name="user_name">User_Name</string>
    <string name="email">your_email_here</string>
    <string name="phone">your_phone_here</string>
    <string name="user_log">Log Anda</string>
    <string name="btn_logout">Logout</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="btn_login">Log In</string>
    <string name="to_register_hint">Belum punya akun?</string>
    <string name="btn_to_register">Buat Akun</string>
    <string name="name_hint">Name</string>
    <string name="btn_signup">Sign Up</string>
    <string name="to_login_hint">Sudah punya akun?</string>
    <string name="btn_to_login">Masuk</string>
    <string name="log_message">Ditambah oleh user</string>
    <string name="log_date">17 Feb 2022</string>
    <string name="log_time">15:15</string>
    <string name="log_status">Diubah</string>
    <string name="log_product_stock">3 Barang</string>
    <string name="grid_stock_number">Stock: 0</string>
    <string name="product_name">product_name</string>
    <string name="product_price">product_price</string>
    <string name="btn_add_cart">Add To Cart</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_min">—</string>
    <string name="btn_plus">+</string>
    <string name="cart_total_price">Rp. 0</string>
    <string name="sell_title">Penjualan</string>
    <string name="product_quantity">x3</string>
    <string name="signup_desc">Daftar untuk mulai melakukan pencatatan dan transaksi lainnya.</string>
    <string name="category_all">Semua</string>
    <string name="category_foods">Makanan</string>
    <string name="category_drinks">Minuman</string>
    <string name="category_clothes">Pakaian</string>
    <string name="category_stationary">Alat Tulis</string>
    <string name="category_domestic">Rumah Tangga</string>
    <string name="category_etc">Lain-lain</string>
    <string name="category_cosmetic">Kosmetik</string>
    <string name="category_toys">Mainan</string>
    <string name="category_schools">Perlengkapan Sekolah</string>
    <string-array name="products_category">
        <item>Makanan</item>
        <item>Minuman</item>
        <item>Pakaian</item>
        <item>Alat Tulis</item>
        <item>Rumah Tangga</item>
        <item>Kosmetik</item>
        <item>Mainan</item>
        <item>Perlengkapan Sekolah</item>
        <item>Lain-lain</item>
    </string-array>
</resources>