<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/chips_categories"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="8dp"
    android:paddingStart="8dp"
    android:scrollbars="none">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chips_categories_group"
        style="@style/Widget.MaterialComponents.Chip.Choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:singleLine="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_makanan"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/category_foods" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_minuman"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/category_drinks" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_pakaian"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/category_clothes" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_alat_tulis"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/category_stationary" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_rumah_tangga"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/category_domestic" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_lain_lain"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/category_etc" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_cosmetic"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/category_cosmetic" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_toys"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/category_toys" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_schools"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/category_schools" />
    </com.google.android.material.chip.ChipGroup>
</HorizontalScrollView>