<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="130dp"
    android:layout_height="40dp"
    android:orientation="horizontal">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/decrement"
        android:layout_width="30dp"
        android:layout_height="match_parent"
        android:backgroundTint="@color/white"
        android:padding="0dp"
        android:text="@string/btn_min"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:cornerRadius="16dp"
        app:strokeColor="@color/yellow"
        app:strokeWidth="1dp" />

    <EditText
        android:id="@+id/display"
        android:layout_width="70dp"
        android:layout_height="match_parent"
        android:autofillHints="0"
        android:background="@android:color/white"
        android:gravity="center"
        android:inputType="number"
        android:text="@string/number_default"
        android:textColor="@android:color/black" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/increment"
        android:layout_width="30dp"
        android:layout_height="match_parent"
        android:backgroundTint="@color/white"
        android:padding="0dp"
        android:text="@string/btn_plus"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:cornerRadius="16dp"
        app:strokeColor="@color/yellow"
        app:strokeWidth="1dp" />
</LinearLayout>