<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:layout_gravity="center"
    android:id="@+id/cv_item_product"
    android:layout_margin="1dp"
    app:cardElevation="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_product"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerVertical="true"
            android:background="@drawable/box"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/product_name"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/img_product"
            app:layout_constraintTop_toTopOf="@+id/img_product" />

        <TextView
            android:id="@+id/tv_product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/product_price"
            android:textColor="@color/grey"
            android:textSize="11sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_product_stock"
            app:layout_constraintStart_toEndOf="@+id/img_product"
            app:layout_constraintTop_toBottomOf="@+id/tv_product_name" />

        <TextView
            android:id="@+id/tv_product_stock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/product_stock"
            android:textColor="@color/grey"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="@+id/img_product"
            app:layout_constraintStart_toEndOf="@+id/img_product" />

        <com.travijuu.numberpicker.library.NumberPicker
            android:id="@+id/quantity_number_picker"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:layout_marginEnd="16dp"
            android:visibility="invisible"
            app:custom_layout=" @layout/number_picker_layout"
            app:focusable="true"
            app:layout_constraintBottom_toBottomOf="@+id/img_product"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/img_product"
            app:value="0" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_add_to_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_add_cart"
            android:textSize="11sp"
            app:cornerRadius="4dp"
            app:icon="@drawable/ic_add_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>